tests/baselines/reference/parserAccessors8.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors8.ts(1,15): error TS1049: A 'set' accessor must have exactly one parameter.
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors8.ts(1,15): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors8.ts (2 errors) ====
    var v = { set foo() { } }
                  ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
                  ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.